--- a/RestCountries.html
+++ b/RestCountries.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>REST Countries API Demo</title>
+  <link href="css/styles.css" rel="stylesheet" />
 </head>
 <body>
   <h1>Country Information</h1>
